--- a/timer/index.html
+++ b/timer/index.html
@@ -5,13 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Timer</title>
   </head>
 
   <body>
-    <input type="number" id="duration" />
-    <button id="start" >Start</button>
-    <button id="pause" >Pause</button>
+    <div class="timer">
+      <svg width="200" height="200">
+        <circle 
+        id="svg-circle"
+        r="90" 
+        cx="100" 
+        cy="100" 
+        fill="transparent" 
+        stroke-width="10" 
+        stroke="blue" 
+        transform="rotate(-90 100 100)"
+        />
+      </svg>
+      <div class="content">
+        <input type="number" id="duration" />
+        <button id="start" >Start</button>
+        <button id="pause" >Pause</button>
+      </div>
+    </div>
+    
+    <script src="./timer.js"></script>
     <script src="./app.js"></script>
   </body>
 
